Stopped buttons from jumping to the top of the page, fixed bug with header text alignment, allowed header height and sheet top to be constantly equal through variable

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 .container {
   max-width: 1000px;
   margin: 0 auto;
@@ -29,6 +25,10 @@
 
 .jc-space-even {
   justify-content: space-evenly;
+}
+
+.jc-fstart {
+  justify-content: flex-start;
 }
 
 .ai-center {
