--- a/css/reset.css
+++ b/css/reset.css
@@ -7,7 +7,7 @@ body {
 }
 
 h2 {
-  margin: 10px 0;
+  margin: 0;
 }
 
 h4 {
