--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ small headline on metadata (h5): 18px (RalewayBold)
   --color-grey: #adadad;
   --color-white: #fff;
   --color-black: #000;
+  --header-height: 64px;
 }
 
 .hidden {
@@ -30,7 +31,7 @@ small headline on metadata (h5): 18px (RalewayBold)
 }
 
 header {
-  height: 10vh;
+  /* height: 10vh; */
 }
 
 h1 {
@@ -138,6 +139,10 @@ h5 {
 
 /* non functional classes */
 
+.override-height-64 {
+  height: var(--header-height);
+}
+
 .button-main {
   text-decoration: none;
   border: 3px var(--color-accent) solid;
@@ -190,7 +195,7 @@ h5 {
 
 /* Specific Element CSS rules */
 #bottom-sheet {
-  top: 10vh;
+  top: calc(100vh - (100vh - var(--header-height))); /* up to header height */
   z-index: 1;
   overflow-y: auto;
 }
